--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"bignum": "*",
 		"bufferutil": "*",
 		"cli-color": "*",
-		"cryptoforknote-util": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
-		"cryptonight-hashing": "git://github.com/worktipsdev/node-cryptonight-hashing.git",
+		"cryptoforknote-util": "https://github.com/MoneroOcean/node-cryptoforknote-util.git",
+		"cryptonight-hashing": "https://github.com/worktipsdev/node-cryptonight-hashing.git",
 		"dateformat": "*",
 		"discord.js": "*",
 		"domexception": "*",
